force-app/main/default/objects/Event_Team_Member__c/Event_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Event Team Member</label>
    <nameField>
        <label>Event Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>