force-app/main/default/objects/Event_Team_Member__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <description>Contact details for the team member.</description>
    <label>Contact Information</label>
    <type>Phone</type>
</CustomField>