force-app/main/default/objects/Event_Team_Member__c/fields/Emergency_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Number__c</fullName>
    <description>The emergency contact number for the team member, to be used in case of any emergency during the event.</description>
    <label>Emergency Contact Number</label>
    <type>Phone</type>
</CustomField>