force-app/main/default/objects/Event_Team_Member__c/fields/Event_Details__c.field-meta.xml
<CustomField>
    <fullName>Event_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the team member to the specific event they are working on.</description>
    <label>Event Details</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Event Team Members</relationshipLabel>
    <relationshipName>Event_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>