force-app/main/default/objects/Event_Team_Member__c/fields/Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date__c</fullName>
    <description>Date the team member&apos;s involvement with the event ended.</description>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>