force-app/main/default/objects/Event_Team_Member__c/fields/Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date__c</fullName>
    <description>Date the team member started working on the event.</description>
    <label>Event Start Date</label>
    <type>DateTime</type>
</CustomField>