force-app/main/default/objects/Event_Team_Member__c/fields/Events_Managers__c.field-meta.xml
<CustomField>
    <fullName>Events_Managers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Event Manager who is responsible for this team member. Establishes the relationship to the Events_Managers__c object.</description>
    <label>Events Managers</label>
    <referenceTo>Events_Managers__c</referenceTo>
    <relationshipLabel>Event Team Members</relationshipLabel>
    <relationshipName>Event_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>