force-app/main/default/objects/Event_Team_Member__c/fields/Shift_Timings__c.field-meta.xml
<CustomField>
    <fullName>Shift_Timings__c</fullName>
    <description>This field categorizes the shift that a team member is assigned to during the event.</description>
    <label>Shift Timings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning Shift</fullName>
            </value>
            <value>
                <fullName>Afternoon Shift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>