force-app/main/default/objects/Event_Team_Member__c/fields/Team_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_ID__c</fullName>
    <description>ID for each team member.</description>
    <displayFormat>TeamMemberID-{0000}</displayFormat>
    <label>Team Member ID</label>
    <type>AutoNumber</type>
</CustomField>