force-app/main/default/objects/Event_Team_Member__c/fields/Team_Member_Rating__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Rating__c</fullName>
    <description>A subjective rating for the team member&apos;s performance.</description>
    <label>Team Member Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>