force-app/main/default/objects/Event_Team_Member__c/fields/Team_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Status__c</fullName>
    <description>Current status of the team member&apos;s involvement with the event.</description>
    <label>Team Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>