force-app/main/default/objects/Event_Team_Member__c/fields/Type_Of_Job__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Job__c</fullName>
    <description>Defines the availability of the team member for event tasks.</description>
    <label>Type Of Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>Part-time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>