force-app/main/default/objects/Event_Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Duplicate__c</columns>
    <columns>Event_Details__c</columns>
    <columns>Events_Managers__c</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Event_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>